Fixing footer text overlap

--- a/app/themes/default/css/newui.css
+++ b/app/themes/default/css/newui.css
@@ -1350,21 +1350,21 @@ table.configuration-list tr td:last-child a:before {
 }
 #UsersPageView {
   /*
-	.DetailsView{
-		table{
-			margin-left:8px;
-		}
-		td{
-			text-align:left;
-			padding-left:15px;
-		}
-		th{
-			text-align:left;
-			font-size: 12px !important;
-			color: #666;
-		}
-	}
-	*/
+  .DetailsView{
+    table{
+      margin-left:8px;
+    }
+    td{
+      text-align:left;
+      padding-left:15px;
+    }
+    th{
+      text-align:left;
+      font-size: 12px !important;
+      color: #666;
+    }
+  }
+  */
 
 }
 #UsersPageView .panel {
@@ -3157,15 +3157,15 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
     height: 26px;
   }
   /*
-  	.panel, #permissions-module{
-  		.has-date-select, .has-model-select{
-  			a, button{
-              	&:before{
-                  	top:-3px;
-              	}
+    .panel, #permissions-module{
+      .has-date-select, .has-model-select{
+        a, button{
+                &:before{
+                    top:-3px;
+                }
              }
-  		}
-  	}*/
+      }
+    }*/
   .has-model-select a {
     top: 25px !important;
   }
@@ -5540,6 +5540,7 @@ section {
   margin-right: 50px;
   font-style: italic;
   color: #262877;
+  text-align: right;
 }
 #credit-link {
   background: url(../images/Zurmo.png) left top no-repeat;
